<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_data" />

        <item
            android:id="@+id/nav_webview"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_webview" />

        <item
            android:id="@+id/nav_worker"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Фоновая задача" />

        <item
            android:id="@+id/nav_recorder"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="Диктофон" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="Камера" />

        <item
            android:id="@+id/nav_sensor"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="Датчик давления" />

        <item
            android:id="@+id/nav_files"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="Работа с файлами" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="Профиль" />

        <item
            android:id="@+id/nav_institution"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="Заведения" />

        <item
            android:id="@+id/nav_internet_resource"
            android:icon="@android:drawable/ic_menu_share"
            android:title="Сетевой ресурс" />

    </group>
</menu>